--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,22 @@
 .footerTitleWrap {
   padding-top: 20px;
   padding-bottom: 15px;
+  @media screen and (min-width: 768px) {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  @media screen and (min-width: 1024px) {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  @media screen and (min-width: 1280px) {
+    padding-top: 35px;
+    padding-bottom: 35px;
+  }
+  @media screen and (min-width: 1600px) {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
 
 .footerTitle {
@@ -48,19 +64,62 @@
 .footerContactsImage1 {
   margin-right: 7px;
   width: 13px;
-  height: 13px;
+  @media screen and (min-width: 768px) {
+    margin-right: 8px;
+    width: 21px;
+  }
+  @media screen and (min-width: 1024px) {
+    margin-right: 10px;
+    width: 29px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-right: 13px;
+    width: 38px;
+  }
+  @media screen and (min-width: 1600px) {
+    margin-right: 15px;
+    width: 47px;
+  }
 }
 
 .footerContactsImage2 {
   margin-right: 3px;
   width: 16px;
-  height: 11px;
+  @media screen and (min-width: 768px) {
+    margin-right: 4px;
+    width: 25px;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 35px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-right: 5px;
+    width: 46px;
+  }
+  @media screen and (min-width: 1600px) {
+    width: 57px;
+  }
 }
 
 .footerContactsImage3 {
   margin-right: 7px;
   width: 12px;
-  height: 13px;
+  @media screen and (min-width: 768px) {
+    margin-right: 10px;
+    width: 20px;
+  }
+  @media screen and (min-width: 1024px) {
+    margin-right: 12px;
+    width: 28px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-right: 16px;
+    width: 36px;
+  }
+  @media screen and (min-width: 1600px) {
+    margin-right: 18px;
+    width: 45px;
+  }
 }
 
 .footerContactsTitle {
