--- a/src/scss/sections/_ourTeam.scss
+++ b/src/scss/sections/_ourTeam.scss
@@ -7,6 +7,18 @@
   font-size: calcFluidFontSize(10, 32, 320, 1600);
   line-height: calcFluidLineHeight(12, 39, 320, 1600);
   text-align: center;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 20px;
+  }
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: 1600px) {
+    margin-bottom: 50px;
+  }
 }
 .ourTeamText {
   margin-bottom: 10px;
@@ -18,6 +30,18 @@
   font-size: calcFluidFontSize(7, 32, 320, 1600);
   line-height: calcFluidLineHeight(8, 38, 320, 1600);
   text-align: center;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 20px;
+  }
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 45px;
+  }
+  @media screen and (min-width: 1600px) {
+    margin-bottom: 60px;
+  }
 }
 
 .sliderWrap {
@@ -30,13 +54,16 @@
     max-width: 700px;
   }
   @media screen and (min-width: 1024px) {
+    margin-right: 40px;
     max-width: 944px;
   }
   @media screen and (min-width: 1280px) {
+    margin-right: 80px;
     max-width: 1120px;
   }
   @media screen and (min-width: 1600px) {
-    max-width: 1400px;
+    margin-right: 100px;
+    max-width: 1300px;
   }
 }
 
